Maybe this will work if I commit the files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject">
         <activity
+            android:name=".DisplayResultsActivity"
+            android:exported="true" />
+        <activity
             android:name=".FavouritesActivity"
             android:exported="true" />
         <activity
